testdata/golden/sema/valid/ternary_nothing.fmt
// scenario: ternary with nothing in one branch
fn with_nothing(flag: bool) -> int? {
    return flag ? Some(42) : nothing;
}
