testdata/golden/sema/invalid/ternary_type_mismatch.fmt
// scenario: ternary branches have incompatible types
fn mismatch(flag: bool) -> int {
    return flag ? 1 : "zero";
}
